--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="GoogleBooks app created using create-react-app"
+      content="Google Books app created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
@@ -18,7 +18,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/styles.css">
-    <title>GoogleBooks</title>
+    <title>(React) Google Books</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
